bug 2 - history images alignment

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,14 +6,20 @@
   margin-bottom: 8px;
 }
 
-.gh-username img{
+.gh-username img {
   width: 32px;
+  margin-right: 8px;
 }
 
-#profile-bio{
-  margin-top:10px;
+#profile-bio {
+  margin-top: 10px;
 }
 
 .timeline .timeline-item {
-  padding-bottom:1em;
+  padding-bottom: 1em;
+}
+
+.flex-container {
+  display: flex;
+  align-items: center;
 }
